--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- For VK Wall -->
     <title>Gifr | @johnsnow</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="title" content="05 Dec 2015 " />
+    <meta name="title" content="A post by johnsnow @Gifr" />
     <meta name="description" content="Иду я короче по улице такой. Решил к чике подкатить..." />
     <link rel="image_src" href="img/gifr-logo.jpg" />
 
