--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 <!-- For VK Wall -->
-    <title>Gifr | @laukye</title>
+    <title>Gifr | laukye</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="title" content="Добро пожаловать в Gifr" />
     <meta name="description" content="Привет! Настало время познакомиться! Меня зовут Алексей Леонов. Я вэб-разработчик- энтузиаст. Извращаюсь над вэб-дизайном как хочу. В виду своей невменяемости в приступах неконтроллируемого креативоизвержения, мне одному бывает сложно определить, интересно ли вообще будет кому-то общаться в том формате, в котором весело общаться мне, как, например, здесь. Если тебе нра или у тебя самого тоже плохо с ординарным восприятием реальности, поставь, пожалуйста, лайк или напиши мне в ЛС. Это даст понять, растаскивать из этого поста полноценный сервис или нет. Если ты знаешь, как работает Ворлд Вайд мать его Веб, умеешь его делать и хочешь сотрудничать, ты знаешь, кому писать. Сенкью." />
@@ -172,7 +172,7 @@
 					            <a href="http://vk.com/lkleonov" target="blank_" >#barfingrainbow</a><br/>
 					            <strong>bueuaa</strong>
 					            <br/>
-					            @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">@laukye</a>
+					            @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">laukye</a>
 					        </span>
 					    </span>
 					</span>
@@ -187,7 +187,7 @@
                                 <a href="http://vk.com/lkleonov" target="blank_" >#happy</a><br/>
                                 <strong>weee</strong>
                                 <br/>
-                                @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">@laukye</a>
+                                @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">laukye</a>
                             </span>
                         </span>
                     </span>
@@ -202,7 +202,7 @@
                                 <a href="http://vk.com/lkleonov" target="blank_" >#knockknock</a><br/>
                                 <strong>knock knock</strong>
                                 <br/>
-                                @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">@laukye</a>
+                                @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">laukye</a>
                             </span>
                         </span>
                     </span>
@@ -217,7 +217,7 @@
 					            <a href="http://vk.com/lkleonov" target="blank_" >#blackjack</a><br/>
 					            <strong>с блекджеком</strong>
 					            <br/>
-					            @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">@laukye</a>
+					            @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">laukye</a>
 					        </span>
 					    </span>
 					</span>
@@ -234,7 +234,7 @@
 					            <a href="http://vk.com/lkleonov" target="blank_" >#coding</a><br/>
 					            <strong>js/html/css hacking</strong>
 					            <br/>
-					            @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">@laukye</a>
+					            @<a href="http://vk.com/lkleonov" target="blank_" class="added-by">laukye</a>
 					        </span>
 					    </span>
 					</span>
