--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
                 text-transform: uppercase;
                 font-family: 'Open Sans Condensed';
             }
-
+            body>header a {
+                text-decoration: none;
+                color: initial;
+            }
 
             a {
                     color: cadetblue;
